hphp/hack/test/sound_dynamic/typing/set_append.bad.php.exp
File "set_append.bad.php", line 4, characters 3-11:
Invalid assignment (Typing[4110])
  File "set_append.bad.php", line 3, characters 31-33:
  Expected `int`
  File "set_append.bad.php", line 3, characters 15-21:
  But got `dynamic`
